--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "migrateh": "heroku run knex migrate:latest -a african-marketplace-backend-24",
+    "rollbackh": "heroku run knex migrate:rollback -a african-marketplace-backend-24",
+    "seed": "knex seed:run"
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.11"
   },
   "repository": {
     "type": "git",
@@ -20,8 +29,12 @@
   "homepage": "https://github.com/Build-Week-TT24FT-African-Marketplace/back-end#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "nodemon": "^2.0.7"
+    "knex": "^0.21.17",
+    "knex-cleaner": "^1.3.1",
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.1"
   }
 }
