--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "migrate": "knex migrate:latest",
-    "rollback": "knex migrate:rollback",
+    "migrate": "npx knex migrate:latest",
+    "rollback": "npx knex migrate:rollback",
     "migrateh": "heroku run knex migrate:latest -a african-marketplace-backend-24",
     "rollbackh": "heroku run knex migrate:rollback -a african-marketplace-backend-24",
-    "seed": "knex seed:run"
+    "seed": "npx knex seed:run"
   },
   "engines": {
     "node": "14.15.4",
